--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -31,3 +31,28 @@ style = "bg:red"
 symbol = "💣 "
 format = '[\[$symbol$status\]]($style) '
 disabled = false
+
+[git_branch]
+symbol = "🌱 "
+truncation_length = 4
+truncation_symbol = ""
+ignore_branches = ["master", "main"]
+
+[git_commit]
+commit_hash_length = 4
+tag_symbol = "🔖 "
+
+[git_state]
+format = '[\($state( $progress_current of $progress_total )\)]($style) '
+cherry_pick = "[🍒 PICKING](bold red)"
+
+[git_metrics]
+added_style = "bold blue"
+format = '[+$added]($added_style)/[-$deleted]($deleted_style) '
+
+[git_status]
+up_to_date = "✓"
+staged = '[++\($count\)](green)'
+
+[rlang]
+format = "with [📐 $version](blue bold) "
