--- a/starship/basic.toml
+++ b/starship/basic.toml
@@ -7,14 +7,7 @@ disabled = true
 min_time = 10_000
 format = "took [$duration]($style)"
 
-[character]
-error_symbol = "[X](bold red) "
-
-[status]
-style = "bg:red"
-symbol = "💣 "
-format = '[\[$symbol$status\]]($style) '
-disabled = false
+# Git
 
 [git_branch]
 symbol = "🌱 "
