--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zplug"]
 	path = zplug
 	url = https://github.com/zplug/zplug.git
+[submodule "zi"]
+	path = zi
+	url = https://github.com/z-shell/zi.git
