--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "zplug"]
-	path = zplug
-	url = https://github.com/zplug/zplug.git
-[submodule "zi"]
-	path = zi
+[submodule "thirdparty/zi"]
+	path = thirdparty/zi
 	url = https://github.com/z-shell/zi.git
+[submodule "thirdparty/zplug"]
+	path = thirdparty/zplug
+	url = https://github.com/zplug/zplug.git
